<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"

        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

    <EditText
            style="@style/style_large"
            android:inputType="phone"
            android:id="@+id/AddressBar"
            android:text="@string/form_ip"
            android:layout_below="@+id/Status" android:layout_centerHorizontal="true"/>

    <TextView
            style="@style/style_large"
            android:text="@string/form_status"
            android:id="@+id/Status"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

    <Button
            style="@style/style_large"
            android:text="@string/form_last"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:id="@+id/Previous"
            android:onClick="lastPage"
            android:visibility="gone"/>

    <Button
            style="@style/style_large"
            android:text="@string/form_next"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/Next"
            android:onClick="nextPage"
            android:visibility="gone"/>

    <RadioButton
            style="@style/style_large"
            android:id="@+id/PageStatus"
            android:text="@string/form_status"
            android:layout_above="@+id/AddressBar"
            android:layout_alignParentEnd="true"
            android:button="@drawable/radiobutton"
            android:onClick="status"
            android:visibility="gone"/>

    <GridLayout
            style="@style/style_base"
            android:columnCount="3" android:rowCount="4"
            android:id="@+id/gridLayout"
            android:layout_below="@+id/AddressBar"
            android:layout_centerHorizontal="true">

        <Button
                style="@style/style_scout"
                android:text="@string/scout_4"
                android:id="@+id/BlueScouter1" android:layout_row="1" android:layout_column="0"
                android:background="@color/colorBlue"/>
        <Button
                style="@style/style_scout"
                android:text="@string/scout_5"
                android:id="@+id/BlueScouter2" android:layout_row="1" android:layout_column="1"
                android:background="@color/colorBlue"/>
        <Button
                style="@style/style_scout"
                android:text="@string/scout_6"
                android:id="@+id/BlueScouter3" android:layout_row="1" android:layout_column="2"
                android:background="@color/colorBlue"/>
        <Button
                style="@style/style_scout"
                android:text="@string/scout_1"
                android:id="@+id/RedScouter1" android:layout_row="0" android:layout_column="0"
                android:background="@color/colorRed"/>
        <Button
                style="@style/style_scout"
                android:text="@string/scout_2"
                android:id="@+id/RedScouter2" android:layout_row="0" android:layout_column="1"
                android:background="@color/colorRed"/>
        <Button
                style="@style/style_scout"
                android:text="@string/scout_3"
                android:id="@+id/RedScouter3" android:layout_row="0" android:layout_column="2"
                android:background="@color/colorRed"/>

        <Button
                style="@style/style_scout"
                android:text="@string/scout_view"
                android:onClick="site"
                android:layout_row="3" android:layout_column="1"/>

    </GridLayout>

    <com.stuin.irs_scout.Scouter.PageManager
            style="@style/style_base"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:id="@+id/Form">

    </com.stuin.irs_scout.Scouter.PageManager>

</RelativeLayout>
